fix odd spacings

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -9,8 +9,6 @@ body {
 
 p,summary,details,h1,h2,h3,h4,h5,h6,button,a {
     font-family: 'Fira Sans', sans-serif;
-    text-align: justify;
-    text-justify: inter-ideograph;
     color: $foreground;
 }
 
